updated settings and some comments

--- a/RDS/settings.ini
+++ b/RDS/settings.ini
@@ -4,5 +4,5 @@ password: rootroot
 host: dbinstance2.cykrspa9y2be.us-west-2.rds.amazonaws.com
 database: cse6331
 filepath: /home/angel/amazon_aws/importdata.csv
-bucket: cse6331ar
+bucket: bucketang1
 
